@@ -27,8 +27,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <release>14</release>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <release>16</release>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>com.augustnagro</groupId>
